[gd_scene load_steps=10 format=2]

[ext_resource path="res://Scripts/StartupScreen.gd" type="Script" id=1]
[ext_resource path="res://Fonts/alagard.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://Scenes/UI/SettingsPage.tscn" type="PackedScene" id=3]
[ext_resource path="res://Fonts/FontNormal.tres" type="DynamicFont" id=4]
[ext_resource path="res://Scripts/UI/CreditsUI.gd" type="Script" id=5]
[ext_resource path="res://Art/UI/ButtonStyles/ButtonPressed.tres" type="StyleBox" id=6]
[ext_resource path="res://Art/UI/ButtonStyles/ButtonHover.tres" type="StyleBox" id=7]
[ext_resource path="res://Art/UI/ButtonStyles/ButtonNormal.tres" type="StyleBox" id=8]

[sub_resource type="DynamicFont" id=1]
size = 32
outline_size = 2
font_data = ExtResource( 2 )

[node name="StartupScreen" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}
username = "dangle_2"
session_id = "poop_2"
is_host = true

[node name="BackFuseHolder" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -120.0
margin_top = -128.0
margin_right = 2.0
margin_bottom = 37.0
rect_scale = Vector2( 2, 2 )
custom_constants/separation = 10
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlayButton" type="Button" parent="VBoxContainer"]
margin_right = 122.0
margin_bottom = 23.0
custom_styles/hover = ExtResource( 7 )
custom_styles/pressed = ExtResource( 6 )
custom_styles/normal = ExtResource( 8 )
custom_fonts/font = ExtResource( 4 )
custom_colors/font_color_disabled = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
text = "Play"

[node name="SettingsButton" type="Button" parent="VBoxContainer"]
margin_top = 33.0
margin_right = 122.0
margin_bottom = 56.0
custom_styles/hover = ExtResource( 7 )
custom_styles/pressed = ExtResource( 6 )
custom_styles/normal = ExtResource( 8 )
custom_fonts/font = ExtResource( 4 )
custom_colors/font_color_disabled = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
text = "Settings"

[node name="CreditsButton" type="Button" parent="VBoxContainer"]
margin_top = 66.0
margin_right = 122.0
margin_bottom = 89.0
custom_styles/hover = ExtResource( 7 )
custom_styles/pressed = ExtResource( 6 )
custom_styles/normal = ExtResource( 8 )
custom_fonts/font = ExtResource( 4 )
custom_colors/font_color_disabled = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
text = "Credits"

[node name="ExitButton" type="Button" parent="VBoxContainer"]
margin_top = 99.0
margin_right = 122.0
margin_bottom = 122.0
custom_styles/hover = ExtResource( 7 )
custom_styles/pressed = ExtResource( 6 )
custom_styles/normal = ExtResource( 8 )
custom_fonts/font = ExtResource( 4 )
custom_colors/font_color_disabled = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
text = "Exit"

[node name="VBoxContainer2" type="VBoxContainer" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -176.0
margin_top = -128.0
margin_right = -5.0
margin_bottom = 27.0
rect_scale = Vector2( 2, 2 )
custom_constants/separation = 10
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DeckEditButton" type="Button" parent="VBoxContainer2"]
margin_right = 171.0
margin_bottom = 23.0
custom_styles/hover = ExtResource( 7 )
custom_styles/pressed = ExtResource( 6 )
custom_styles/normal = ExtResource( 8 )
custom_fonts/font = ExtResource( 4 )
custom_colors/font_color_disabled = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
text = "Deck Editor"

[node name="PracticeButton" type="Button" parent="VBoxContainer2"]
margin_top = 33.0
margin_right = 171.0
margin_bottom = 56.0
custom_styles/hover = ExtResource( 7 )
custom_styles/pressed = ExtResource( 6 )
custom_styles/normal = ExtResource( 8 )
custom_fonts/font = ExtResource( 4 )
custom_colors/font_color_disabled = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
text = "Practice"

[node name="LobbyButton" type="Button" parent="VBoxContainer2"]
margin_top = 66.0
margin_right = 171.0
margin_bottom = 89.0
custom_styles/hover = ExtResource( 7 )
custom_styles/pressed = ExtResource( 6 )
custom_styles/normal = ExtResource( 8 )
custom_fonts/font = ExtResource( 4 )
custom_colors/font_color_disabled = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
text = "Lobby"

[node name="DirectButton" type="Button" parent="VBoxContainer2"]
margin_top = 99.0
margin_right = 171.0
margin_bottom = 122.0
custom_styles/hover = ExtResource( 7 )
custom_styles/pressed = ExtResource( 6 )
custom_styles/normal = ExtResource( 8 )
custom_fonts/font = ExtResource( 4 )
custom_colors/font_color_disabled = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
text = "Direct Connection"

[node name="BackButton" type="Button" parent="VBoxContainer2"]
margin_top = 132.0
margin_right = 171.0
margin_bottom = 155.0
custom_styles/hover = ExtResource( 7 )
custom_styles/pressed = ExtResource( 6 )
custom_styles/normal = ExtResource( 8 )
custom_fonts/font = ExtResource( 4 )
custom_colors/font_color_disabled = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
text = "Back"

[node name="CreditsLabel" type="RichTextLabel" parent="."]
visible = false
anchor_left = 0.5
anchor_right = 0.5
margin_left = -512.0
margin_right = 512.0
margin_bottom = 1529.0
custom_fonts/normal_font = SubResource( 1 )
custom_colors/default_color = Color( 0, 0, 0, 1 )
bbcode_enabled = true
bbcode_text = "

[center]
[u]Programming[/u]:
Me
[u]																			[/u]

[u]Art[/u]:
Me & Aaron Wise
[u]																			[/u]

[u]Sound Effects[/u]:
Sound effects obtained from Kenney.nl
Sound effects obtained from zapsplat.com
[u]																			[/u]

[u]Music[/u]: 
Cam Yeomans, Owen [Lastname], & Someone else
 - Scratched & Mixed

Nic Silver - Reborn in a Dream
Music Provided by Gyft Music ([url=\"https://gyftmusic.com\"]gyftmusic.com[/url])

Canton Becker - Floodwaters
cantonbecker.com/music/
Licensed under [url=\"https://creativecommons.org/licenses/by/2.0/\"]CC BY 2.0[/url]

Fluxx69 - Head Long
Licensed under [url=\"https://creativecommons.org/licenses/by-sa/3.0/\"]CC BY-SA 3.0[/url]

LoopKitchen - Ravenous
Licensed under [url=\"https://creativecommons.org/licenses/by-nd/3.0/\"]CC BY-ND 3.0[/url]

Trimmed version of TNH - The Reason of Techno
Licensed under [url=\"https://creativecommons.org/licenses/by-sa/3.0/\"]CC BY-SA 3.0[/url]

Trimmed version of Marco Kalach - Synesthetic Fandango
Licensed under [url=\"https://creativecommons.org/licenses/by-sa/3.0/\"]CC BY-SA 3.0[/url]

Robbot - Z
Licensed under [url=\"https://creativecommons.org/licenses/by/3.0/\"]CC BY 3.0[/url]

Marisameow - Soulful Sunlight
Licensed under [url=\"https://creativecommons.org/licenses/by/3.0/\"]CC BY 3.0[/url]



[/center]
"
text = "


Programming:
Me
																			

Art:
Me & Aaron Wise
																			

Sound Effects:
Sound effects obtained from Kenney.nl
Sound effects obtained from zapsplat.com
																			

Music: 
Cam Yeomans, Owen [Lastname], & Someone else
 - Scratched & Mixed

Nic Silver - Reborn in a Dream
Music Provided by Gyft Music (gyftmusic.com)

Canton Becker - Floodwaters
cantonbecker.com/music/
Licensed under CC BY 2.0

Fluxx69 - Head Long
Licensed under CC BY-SA 3.0

LoopKitchen - Ravenous
Licensed under CC BY-ND 3.0

Trimmed version of TNH - The Reason of Techno
Licensed under CC BY-SA 3.0

Trimmed version of Marco Kalach - Synesthetic Fandango
Licensed under CC BY-SA 3.0

Robbot - Z
Licensed under CC BY 3.0

Marisameow - Soulful Sunlight
Licensed under CC BY 3.0




"
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BackButton" type="Button" parent="."]
visible = false
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -154.0
margin_top = -57.0
margin_right = -32.0
margin_bottom = -32.0
custom_styles/hover = ExtResource( 7 )
custom_styles/pressed = ExtResource( 6 )
custom_styles/normal = ExtResource( 8 )
custom_fonts/font = ExtResource( 4 )
custom_colors/font_color_disabled = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
text = "Back"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SettingsPage" parent="." instance=ExtResource( 3 )]
visible = false

[connection signal="pressed" from="VBoxContainer/PlayButton" to="." method="onPlayPressed"]
[connection signal="pressed" from="VBoxContainer/SettingsButton" to="." method="onSettingsPressed"]
[connection signal="pressed" from="VBoxContainer/CreditsButton" to="." method="onCreditsPressed"]
[connection signal="pressed" from="VBoxContainer/ExitButton" to="." method="onExitPressed"]
[connection signal="pressed" from="VBoxContainer2/DeckEditButton" to="." method="onDeckEditPressed"]
[connection signal="pressed" from="VBoxContainer2/PracticeButton" to="." method="onPracticePressed"]
[connection signal="pressed" from="VBoxContainer2/LobbyButton" to="." method="onLobbyButtonPressed"]
[connection signal="pressed" from="VBoxContainer2/DirectButton" to="." method="onDirectButtonPressed"]
[connection signal="pressed" from="VBoxContainer2/BackButton" to="." method="onBackPressed"]
[connection signal="meta_clicked" from="CreditsLabel" to="CreditsLabel" method="_on_CreditsLabel_meta_clicked"]
[connection signal="pressed" from="BackButton" to="." method="onBackPressed"]
[connection signal="settingsClose" from="SettingsPage" to="." method="onSettingsClose"]
